<resources>
    <string name="app_name">login</string>
    <string name="register">注册</string>
    <string name="register_now">立即注册</string>
    <string name="input_email_or_phone">输入你的邮箱或者手机号</string>
    <string name="input_pass_hint">输入密码</string>
    <string name="input_phone">输入手机号</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="phone_yanzheng">手机验证码登陆</string>
    <string name="login">登陆</string>
    <string name="error_info">报错区域</string>
    <string name="email_regist">邮箱注册</string>
    <string name="message_vertion">短信验证</string>
    <string name="set_pass">设置密码</string>
    <string name="input_invite_code">邀请码（选填）</string>
</resources>
