<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ARegister">
    <TextView
        style="@style/tab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_15"
        android:text="@string/login"
        android:textColor="#ff5484d5"
        android:textSize="14sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@mipmap/my_back" />
    <TextView
        android:id="@+id/tv_regist_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#ff838c97"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/dp_89"
        android:layout_marginLeft="@dimen/dp_30"
        />
    <TextView
        android:id="@+id/tv_error_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_info"
        android:textColor="#ffd73c2c"
        android:textSize="14sp"
        android:layout_below="@id/tv_regist_show"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_9"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="香港"
        android:textColor="#ff303f51"
        android:textSize="16sp"
        android:layout_below="@id/tv_error_info"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        />
    <TextView
        android:id="@+id/tv_location_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+86"
        android:textColor="#ff303f51"
        android:textSize="16sp"
        android:layout_below="@id/tv_location"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        style="@style/tab_text"
        />
    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_location"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@null"
        android:hint="@string/input_phone"
        android:textColor="@color/color_303f51"
        android:textColorHint="@color/color_838C97"
        android:layout_marginTop="@dimen/dp_30"
        android:textSize="16sp"
        android:layout_toRightOf="@id/tv_location_number"
        android:layout_marginLeft="@dimen/dp_7"
        android:inputType="phone"
        android:textCursorDrawable="@null"
        android:maxLines="1"
        android:singleLine="true"
        />

    <View
        android:id="@+id/view_line_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/et_phone_number"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@color/color_E8EBEE" />
    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_line_user"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@mipmap/login_bg_gray"
        android:gravity="center"
        android:text="@string/register_now"
        android:textColor="#ffffffff"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_regist"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/email_regist"
        android:textColor="#ff5484d5"
        android:textSize="14sp" />

</RelativeLayout>