<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ALogin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_regist"
            style="@style/tab_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_15"
            android:text="@string/register"
            android:textColor="#ff5484d5"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_23"
            android:layout_marginTop="@dimen/dp_73"
            android:background="@mipmap/login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_login_logo"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_7"
            android:text="登录"
            android:textColor="#ff838c97"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_226"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@null"
            android:hint="@string/input_email_or_phone"
            android:textColor="@color/color_303f51"
            android:textColorHint="@color/color_838C97"
            android:textCursorDrawable="@null"

            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:id="@+id/view_line_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/et_user_name"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@color/color_E8EBEE" />

        <EditText
            android:id="@+id/et_user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line_user"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@null"
            android:hint="@string/input_pass_hint"
            android:textColor="@color/color_303f51"
            android:textColorHint="@color/color_838C97"
            android:textCursorDrawable="@null"
            android:maxLines="1"


            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:id="@+id/view_line_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/et_user_pass"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@color/color_E8EBEE" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line_pass"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@mipmap/login_bg_gray"
            android:gravity="center"
            android:text="登录"
            android:textColor="#ffffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/forget_pass"
            android:textColor="#ff5484d5"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_30"
            android:text="@string/phone_yanzheng"
            android:textColor="#ff5484d5"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/tv_forget_pass"
            android:layout_marginLeft="@dimen/dp_99"
            android:layout_marginTop="@dimen/dp_45"
            android:background="@mipmap/login_facebook" />

        <ImageView
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/tv_forget_pass"
            android:layout_marginTop="@dimen/dp_45"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/login_qq" />

        <ImageView
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/tv_forget_pass"
            android:layout_marginTop="@dimen/dp_45"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_99"
            android:background="@mipmap/login_wechat" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>